# CV-Assistant-

./: README.md  basic_roadmap.dot  direct_roadmap_basic.json  direct_roadmap_enhanced.json  enhanced_roadmap.dot  feedback_test_results.json  learning.py  performance_test.py  pyproject.toml  speed_test.py  test_auth.py  test_direct_roadmap.py  test_docling.py  test_feedback_agent.py  test_feedback_endpoint.py  test_resume_system.db  test_roadmap_system.py
.claude/: settings.local.json
docs/: Revised 3-Day Plan_ Focused Resume Optimization Pl.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginForm.tsx  PrivateRoute.tsx  RegisterForm.tsx  index.ts
frontend/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  index.ts
frontend/src/components/layout/: Header.tsx
frontend/src/components/resume/: ResumeList.tsx  ResumeUpload.tsx  index.ts
frontend/src/components/roadmap/: MermaidDiagram.tsx  RoadmapGenerator.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Login.tsx  Roadmap.tsx  index.ts
frontend/src/services/: api.ts  authService.ts  chatService.ts  index.ts  resumeService.ts  roadmapService.ts
frontend/src/types/: auth.ts  chat.ts  index.ts  resume.ts  roadmap.ts
src/backend/api/: deps.py  main.py
src/tests/: README.md  __init__.py  conftest.py  models_test.py  pytest.ini  requirements.txt  run_tests.py
src/tests/integration/: test_auth_endpoints.py
src/tests/unit/: test_auth_crud.py  test_resume_crud.py
(+54 files in other folders)
