[project]
name = "pythonproject2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "docling>=2.54.0",
    "fastapi>=0.117.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-docling>=1.1.0",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.3.1",
    "langchain-postgres>=0.0.15",
    "langchain-unstructured>=0.1.6",
    "passlib>=1.7.4",
    "pip>=25.2",
    "prefect>=3.4.20",
    "psycopg-binary>=3.2.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai>=1.0.10",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.43",
    "transformers>=4.56.2",
    "unstructured[pdf]>=0.18.15",
    "uvicorn>=0.37.0",
    "wandb>=0.22.0",
]
